--- a/war/Com_example_rssr.html
+++ b/war/Com_example_rssr.html
@@ -52,7 +52,7 @@
 	    			
 				</div>
 				<br>
-				<h6>Add new RSS channel</h6>
+				<h6 id="titleAdd">Add new RSS channel</h6>
 				<div id="addFeed"></div>
 				<br><br>
 				<div id="channelsDiv">
